--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
+    <h2>Hello How Are You?</h2>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
-    <h1>Hello How Are You?</h1>
-    <h1>Hello How Are You?</h1>
+    <p>Hello How Are You?</p>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
     <h1>Hello How Are You?</h1>
